--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vite-demo2",
     "private": true,
     "version": "0.0.0",
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc && vite build",
@@ -36,7 +36,9 @@
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-vue": "^9.9.0",
+        "husky": "^8.0.3",
         "less": "^4.1.3",
+        "lint-staged": "^13.1.0",
         "prettier": "^2.8.3",
         "typescript": "^4.9.3",
         "vite": "^4.0.0",
@@ -47,5 +49,11 @@
         "commitizen": {
             "path": "node_modules/cz-customizable"
         }
-    }
+    },
+    "lint-staged": {
+    	"*.{js,ts}": [
+            "npm run eslint",
+            "npm run prettier"
+    	]
+  }
 }
