--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "vite-demo2",
     "private": true,
     "version": "0.0.0",
-    "type": "commonjs",
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc && vite build",
@@ -51,9 +50,9 @@
         }
     },
     "lint-staged": {
-    	"*.{js,ts}": [
-            "npm run eslint",
-            "npm run prettier"
-    	]
-  }
+        "*.{js,ts}": [
+            "npm run lint",
+            "npm run prettier:fix"
+        ]
+    }
 }
