--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lint-staged": {
         "*.{js,ts}": [
             "npm run lint",
-            "npm run prettier:fix"
+            "npm run prettier"
         ]
     }
 }
