--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     },
     "lint-staged": {
         "*.{js,ts}": [
-            "npm run lint",
+            "npm run lint:fix",
             "npm run prettier:fix"
         ]
     }
