feature(custom): update new lint-staged

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,18 @@
-/dist/*
-/public/*
-/node_modules/**
-.local
-.output.js
 **/*.svg
-**/*.sh
+**/*.ico
+package.json
+/dist
+.DS_Store
+.eslintignore
+*.png
+*.toml
+.editorconfig
+.gitignore
+.prettierignore
+LICENSE
+.eslintcache
+*.lock
+yarn-error.log
+/public
+**/node_modules/**
+.npmrc
