--- a/package.json
+++ b/package.json
@@ -1,17 +1,44 @@
 {
-    "name": "vite-demo2",
+    "name": "vite-ts-vue-pinia-template",
     "private": true,
-    "version": "0.0.0",
+    "version": "0.0.1",
+    "license": "MIT",
+    "description": "a vite + vue3 + pinia + typescript + ant-design-vue template",
+    "keywords": [
+        "vite",
+        "vue3",
+        "vue-router",
+        "setup",
+        "typescript",
+        "pinia",
+        "ant-design-vue",
+        "template"
+    ],
+    "engines": {
+        "node": ">=14"
+    },
     "scripts": {
-        "dev": "vite",
-        "build": "vue-tsc && vite build",
+        "bootstrap": "pnpm install",
+        "check": "vue-tsc --noEmit",
+        "serve": "npm run dev",
+        "dev:development": "vite --mode development",
+        "build:production": "vue-tsc --noEmit && vite build --mode production",
+        "build": "vite build",
+        "build:check": "vue-tsc --noEmit && vite build",
+        "build:github": "vite build --base=/vite-vue3-ts/",
+        "build:no-cache": "pnpm clean:cache && npm run build",
         "preview": "vite preview",
+        "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
+        "clean:lib": "rimraf node_modules",
         "lint": "npx eslint --ext .js,.vue --ignore-path .gitignore src",
         "lint:fix": "npm run lint -- --fix",
         "prettier": "npx prettier src --check",
         "prettier:fix": "npm run prettier -- --write",
         "format": "npm run prettier:fix && npm run lint:fix",
-        "commit": "git-cz"
+        "lint:lint-staged": "lint-staged -c ./.husky/lintstagedrc.js",
+        "commit": "git-cz",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && npx prettier CHANGELOG.md --write && git add CHANGELOG.md",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@vueuse/core": "^9.11.1",
@@ -27,12 +54,14 @@
         "@typescript-eslint/eslint-plugin": "^5.48.2",
         "@typescript-eslint/parser": "^5.48.2",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vitejs/plugin-vue-jsx": "^3.0.0",
         "commitizen": "^4.3.0",
         "commitlint-config-cz": "^0.13.3",
         "cz-conventional-changelog": "^3.3.0",
         "cz-customizable": "^7.0.0",
         "eslint": "^8.32.0",
         "eslint-config-prettier": "^8.6.0",
+        "eslint-define-config": "^1.14.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-vue": "^9.9.0",
         "husky": "^8.0.3",
